--- a/frontend/src/components/inputs/loginInputs/style.css
+++ b/frontend/src/components/inputs/loginInputs/style.css
@@ -1,4 +1,11 @@
-.login_2_wrap input {
+.input_wrap {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.6rem;
+}
+.input_wrap input {
   width: 100%;
   height: 50px;
   border-radius: 5px;
@@ -6,6 +13,7 @@
   font-size: 17px;
   padding-left: 15px;
 }
+
 .input_wrap input:focus {
   outline: none;
   border: 1px solid var(--blue-color);
@@ -29,4 +37,36 @@
   font-size: 17px;
   padding-left: 15px;
   color: rgba(151, 149, 149, 0.836);
+}
+.input_error_border {
+  border-color: #b94a48 !important;
+}
+.input_wrap i {
+  position: absolute;
+  right: 5px;
+  top: 15px;
+  transform: scale(0.8);
+}
+.input_error {
+  position: relative;
+  background: #b94a48;
+  width: 100%;
+  padding: 15px 10px;
+  border-radius: 5px;
+  font-size: 13px;
+  color: #fff;
+}
+.error_arrow_top {
+  border-top: 10px solid #b94a48;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  position: absolute;
+  bottom: -9px;
+}
+.error_arrow_bottom {
+  border-bottom: 10px solid #b94a48;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  position: absolute;
+  top: -9px;
 }
